--- a/README.mkd
+++ b/README.mkd
@@ -1,33 +1,32 @@
-# Change by Us # 
+# Change by Us
+Change by Us aims to invite ideas for civic solutions, intelligently form project groups, and effectively connect groups with resources to bring their ideas to life.
 
-"Change by Us aims to invite ideas for civic solutions, intelligently form project groups, and effectively connect groups with resources to bring their ideas to life."
 
-
-## Installation ##
+# Installation
 
 Please see the INSTALL.txt file.
 
 
-## Upgrading ##
+# Upgrading
 
 For upgrade instructions, see the UPGRADE.txt.
 
 
-## Running ##
+# Running
 
 To run the application, use the following command from the code root:
 
     lighttpd -D -f lighttpd.conf
-    
+
 You can also look into using the Upstart script found at scripts/upstart/.
 More information on this can be found at [Running as Service in Install Instructions](https://github.com/localprojects/Change-By-Us/wiki/Installation-Instructions-%28Ubuntu%29).
 
-   
-## How to Contribute ##
+
+# How to Contribute
 
 Instructions coming soon!
 
-## Documentation ##
+# Documentation
 
 Main documentation can currently be found on Github at: https://github.com/localprojects/Change-By-Us/wiki
 
@@ -38,7 +37,7 @@ in the following locations:
     * Javascript: docs/js/index.html
 
 
-## Credits ##
+# Credits
 
 The following organizations have helped work on this platform:
 
